# rust-serverless-api

./: Cargo.toml  LICENSE  README.md
src/: auth.rs  constants.rs  crud.rs  errors.rs  lib.rs  macros.rs  request.rs  response.rs  routing.rs
