[package]
name = "fractic-serverless-api"
version = "0.1.0"
authors = ["Mart van Buren <mart@fractic.io>"]
edition = "2021"

[dependencies]
aws_lambda_events = "0.10.0"
fractic-generic-server-error = { git = "https://github.com/fractic-io/rust-generic-server-error.git" }
lambda_runtime = "0.8.1"
serde = "1.0.176"
serde_json = "1.0.104"