[package]
name = "fractic-serverless-api"
version = "0.1.0"
authors = ["Mart van Buren <mart@fractic.io>"]
edition = "2021"

[dependencies]
aws_lambda_events = "0.15.1"
fractic-generic-server-error = { git = "https://github.com/fractic-io/rust-generic-server-error.git" }
lambda_runtime = "0.11.3"
serde = "1.0.203"
serde_json_path_to_error = "0.1.4"
