[package]
name = "fractic-aws-apigateway"
version = "0.2.0"
authors = ["Mart van Buren <mart@fractic.io>"]
edition = "2021"

[dependencies]
aws-sdk-dynamodb = "1.34.0"
aws_lambda_events = "0.15.1"
fractic-aws-dynamo = { git = "https://github.com/fractic-io/rust-aws-dynamo.git" }
fractic-env-config = { git = "https://github.com/fractic-io/rust-env-config.git" }
fractic-server-error = { git = "https://github.com/fractic-io/rust-server-error.git" }
lambda_runtime = "0.11.3"
serde = "1.0.203"
serde_json_path_to_error = "0.1.4"